--- a/pages/posts/post.wxss
+++ b/pages/posts/post.wxss
@@ -1,12 +1,5 @@
 /* pages/posts/post.wxss */
-
-/* 不太理解这种前面不加点的意义，然后父控件和子控件一起写又代表什么 */
-
-/* .container{
-  background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-} */
+@import "post-item/post-item-template.wxss";
 
 swiper {
   width: 100%;
@@ -27,79 +20,4 @@ swiper image {
   border-bottom: 1px solid #ededed;
   border-top: 1px solid #ededed;
   padding-bottom: 5px;
-}
-
-/* margin可以统一写，顺序表示 上，右，下，左*/
-
-.post-author-date {
-  margin: 10rpx 0 20rpx 10rpx;
-}
-
-/* vertical-align: middle;表示垂直居中 */
-
-.post-author {
-  width: 60rpx;
-  height: 60rpx;
-  border-radius: 50%;
-  vertical-align: middle;
-}
-
-.post-date {
-  margin-left: 20rpx;
-  vertical-align: middle;
-  margin-bottom: 10px;
-  font-size: 26rpx;
-}
-
-/* 什么时候使用px，什么时候使用rpx，建议是：水平方向的间距的话用rpx，垂直方向使用px */
-
-.post-title {
-  font-size: 34rpx;
-  font-weight: 600;
-  color: #333;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-
-.post-image {
-  margin-left: 16px;
-  width: 100%;
-  height: 400rpx;
-  margin: auto 0;
-  margin-bottom: 15px;
-}
-
-/* 前面六行都是用来文本溢出单行/多行省略 参考https://blog.csdn.net/zhuhai__yizhi/article/details/77199190*/
-.post-content {
-  display: -webkit-box;
-  word-break: break-all;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  color: #666;
-  font-size: 28rpx;
-  margin-bottom: 20rpx;
-  margin-left: 20rpx;
-  letter-spacing: 2rpx;
-  line-height: 40rpx;
-}
-
-.post-like {
-  font-size: 13px;
-  flex-direction: row;
-  line-height: 16px;
-  margin-left: 10px;
-}
-
-.post-like-image {
-  height: 16px;
-  width: 16px;
-  margin-right: 8px;
-  vertical-align: middle;
-}
-
-.post-like-font {
-  vertical-align: middle;
-  margin-right: 20px;
 }
