--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -2,7 +2,7 @@
 <view class='container'>
   <image class='user-avatar' src="/resources/imgs/ic_avatar.jpg"/>
   <text class='user-name'>Hello,Zoey</text>
-  <view class='moto-container'>
+  <view class='moto-container' bindtap='onClick'>
     <text class='moto'>开启小程序之旅</text>
   </view>
 </view>
