--- a/pages/posts/post-item/post-item-template.wxss
+++ b/pages/posts/post-item/post-item-template.wxss
@@ -1,11 +1,20 @@
 /* margin可以统一写，顺序表示 上，右，下，左*/
+.post-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20rpx;
+  margin-bottom: 40rpx;
+  background-color: #fff;
+  border-bottom: 1px solid #ededed;
+  border-top: 1px solid #ededed;
+  padding-bottom: 5px;
+}
 
 .post-author-date {
   margin: 10rpx 0 20rpx 10rpx;
 }
 
 /* vertical-align: middle;表示垂直居中 */
-
 .post-author {
   width: 60rpx;
   height: 60rpx;
@@ -21,7 +30,6 @@
 }
 
 /* 什么时候使用px，什么时候使用rpx，建议是：水平方向的间距的话用rpx，垂直方向使用px */
-
 .post-title {
   font-size: 34rpx;
   font-weight: 600;
