--- a/pages/posts/post-item/post-item-template.wxml
+++ b/pages/posts/post-item/post-item-template.wxml
@@ -2,19 +2,19 @@
   <view class='post-container'>
 
     <view class='post-author-date'>
-      <image class='post-author' src='{{item.avatar}}' mode='aspectFill' />
-      <text class='post-date'>{{item.date}}</text>
+      <image class='post-author' src='{{avatar}}' mode='aspectFill' />
+      <text class='post-date'>{{date}}</text>
     </view>
 
-    <text class='post-title'>{{item.title}}</text>
-    <image class='post-image' src='{{item.imgSrc}}' mode='aspectFill' />
-    <text class='post-content'>{{item.content}}</text>
+    <text class='post-title'>{{title}}</text>
+    <image class='post-image' src='{{imgSrc}}' mode='aspectFill' />
+    <text class='post-content'>{{content}}</text>
 
     <view class='post-like'>
       <image class='post-like-image' src='../../../resources/imgs/ic_collect.png' />
-      <text class='post-like-font'>{{item.collection}}</text>
+      <text class='post-like-font'>{{collection}}</text>
       <image class='post-like-image' src='../../../resources/imgs/ic_comment.png' />
-      <text class='post-like-font'>{{item.reading}}</text>
+      <text class='post-like-font'>{{reading}}</text>
     </view>
 
   </view>
