--- a/pages/posts/post.wxml
+++ b/pages/posts/post.wxml
@@ -16,6 +16,8 @@
 
   <!-- 列表部分 block相当于一个括号而已，在括号内的部分会被视为一个整体-->
   <block wx:for="{{post_list}}" wx:for-item="item">
-    <template is="postItem" data="{{...item}}" />
+    <view catchtap="onPostItemClick">
+      <template is="postItem" data="{{...item}}" />
+    </view>
   </block>
 </view>
