--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -2,19 +2,19 @@
 <view class='container'>
 
   <view class='head-image'>
-    <image class='head-image' src='../../../resources/imgs/banner_1.jpg' mode='aspectFill' />
-    <image class='audio' src='../../../resources/imgs/ic_play.png'/>
+    <image class='head-image' src='{{postData.headImgsSrc}}' mode='aspectFill' />
+     <image class='audio' src='../../../resources/imgs/ic_play.png'/> 
   </view>
   <view class='sub-container'>
 
     <view class='author-date'>
-      <image class='avatar' src='../../../resources/imgs/avatar_1.jpg' mode='aspectFill' />
-      <text class='author'>zoey</text>
+      <image class='avatar' src='{{postData.avatar}}' mode='aspectFill' />
+      <text class='author'>{{postData.author}}</text>
       <text class='const-text'>发表于</text>
-      <text class='date'>一天前</text>
+      <text class='date'>{{postData.dateTime}}</text>
     </view>
 
-    <text class='title'>昨晚的小龙虾好吃吗</text>
+    <text class='title'>{{postData.title}}</text>
 
     <view class='tool'>
       <view class='circle-img'>
@@ -24,90 +24,6 @@
       <view class='horizon' />
     </view>
 
-    <text class='detail'>那些以为会永远的昨天
-
-是手机忘了删掉的照片
-
-像口袋里被洗破的门票
-
-时间搅碎一切
-
- 
-
-就像有时差的两个时间
-
-白天注定无法拥抱黑夜
-
-我们走过了多少的考验
-
-还是死结
-
- 
-
-为什么感觉越强烈
-
-却只会反方向撕裂
-
-越是伤的直接
-
- 
-
-为什么总要到熄灭
-
-才怀念曾经的炙热
-
-感到迫切
-
- 
-
-为什么总要到残缺
-
-才怀念相对的完全
-
-发现爱走不对时间
-
- 
-
-就像有时差的两个世界
-
-白天注定无法拥抱黑夜
-
-我们对爱情的一知半解
-
-还是破灭
-
- 
-
-为什么感觉越强烈
-
-却只会反方向撕裂
-
-越是伤的直接
-
- 
-
-为什么总要到熄灭
-
-才怀念曾经的炙热
-
-感到迫切
-
- 
-
-为什么总要到残缺
-
-才怀念相对的完全
-
-发现爱走不对时间
-
- 
-
-就像有时差的两个世界
-
-白天注定无法拥抱黑夜
-
-我们对爱情的一知半解
-
-还是破灭</text>
+    <text class='detail'>{{postData.detail}}</text>
   </view>
 </view>
