--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,2 +1,14 @@
-<!--pages/movies/movies.wxml-->
-<text>pages/movies/movies.wxml</text>
+<import src="movie-list/movie-list-template.wxml" />
+
+<view>
+  <view class="movies-template">
+    <template is="movieListTemplate" data='{{...inTheaters}}' />
+  </view>
+  <view class="movies-template">
+    <template is="movieListTemplate" data='{{...comingSoon}}' />
+  </view>
+  <view class="movies-template">
+    <template is="movieListTemplate" data='{{...top250}}' />
+  </view>
+
+</view>
