--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,1 +1,12 @@
 /* pages/movies/movies.wxss */
+@import "movie-list/movie-list-template.wxss";
+
+.container {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+}
+
+.movies-template {
+  margin-bottom: 30rpx;
+}
