下拉刷新和上拉加载更多

--- a/pages/movies/movie-list/movie-list-template.wxml
+++ b/pages/movies/movie-list/movie-list-template.wxml
@@ -4,8 +4,8 @@
   <view class='movie-list-container'>
     <view class='inner-container'>
       <view class='movie-head'>
-        <text>正在热映</text>
-        <text class='more-text'>更多></text>
+        <text>{{categoryTitle}}</text>
+        <text catchtap='onMoreTap' class='more-text' data-category='{{categoryTitle}}'>更多></text>
       </view>
 
       <view class='movies-container'>
