--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -3,10 +3,34 @@
 
 .container {
   background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
 }
 
 .movies-template {
-  margin-bottom: 30rpx;
+  margin-bottom: 20rpx;
+}
+
+.search {
+  background-color: #f2f2f2;
+  height: 80rpx;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+ .search input {
+  height: 100%;
+  width: 600rpx;
+  margin-left: 20rpx;
+  font-size: 28rpx;
+} 
+
+.search-img {
+  /* 垂直居中 */
+  margin: auto 0 auto 20rpx;
+}
+
+.placeholder {
+  font-size: 14px;
+  color: #d1d1d1;
+  margin-left: 20rpx;
 }
