--- a/pages/posts/post.wxss
+++ b/pages/posts/post.wxss
@@ -1,12 +1,16 @@
 /* pages/posts/post.wxss */
 @import "post-item/post-item-template.wxss";
 
+.container{
+  background-color: #f2f2f2;
+}
+
 swiper {
   width: 100%;
-  height: 600rpx;
+  height: 400rpx;
 }
 
 swiper image {
   width: 100%;
-  height: 600rpx;
+  height: 400rpx;
 }
