--- a/pages/welcome/welcome.wxss
+++ b/pages/welcome/welcome.wxss
@@ -1,17 +1,20 @@
 /* pages/welcome/welcome.wxss */
 
-.container{
-  display: flex;
-  flex-direction: column;
+.container {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    background-color:#fec35a;
+    padding-top: 200rpx;
 }
 
-.user-avatar{
+.user-avatar {
   width: 200rpx;
   height: 200rpx;
   border-radius: 50%;
 }
 
-.user-name{
+.user-name {
   margin-top: 50rpx;
   font-size: 32rpx;
   font-weight: bold;
@@ -21,7 +24,8 @@
 /* 文字水平居中是通过设置text-align 
  border设置的是边框
 */
-.moto-container{
+
+.moto-container {
   margin-top: 300rpx;
   border: 1px solid #fff;
   width: 200rpx;
@@ -31,14 +35,15 @@
 }
 
 /* 垂直居中是通过设置内部text的line-height的高度与父组件一致 */
-.moto{
+
+.moto {
   font-size: 23rpx;
   font-weight: bold;
   line-height: 90rpx;
   color: #fff;
 }
 
-page{
+page {
   background-color: #fec35a;
   height: 100%;
 }
