--- a/pages/movies/more-movie/more-movie.wxml
+++ b/pages/movies/more-movie/more-movie.wxml
@@ -1,3 +1,3 @@
-<import src="../movie-grid/movie-grid-template.wxml" />;
+<import src="../movie-grid/movie-grid-template.wxml" />
 
-<template is='movieGridTemplate' data='{{movies}}' />
+<template is='movieGridTemplate' data='{{movies}}' /> 
