添加日志工具类

--- a/pages/movies/movie-detail/movie-detail.wxml
+++ b/pages/movies/movie-detail/movie-detail.wxml
@@ -57,7 +57,7 @@
   <view class="cast">
     <text class="cast-font"> 影人</text>
     <scroll-view class="cast-imgs" scroll-x="true" style="width:100%">
-      <block wx:for="{{movie.castsInfo}}" wx:for-item="item">
+      <block wx:for="{{movie.castsInfo}}" wx:for-item="item" wx:key='index' >
         <view class="cast-container">
           <image class="cast-img" src="{{item.img}}" mode='aspectFill' />
           <text class="cast-name">{{item.name}}</text>
