--- a/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/pages/movies/movie-grid/movie-grid-template.wxml
@@ -2,7 +2,7 @@
 
 <template name='movieGridTemplate'>
   <view class='grid-container'>
-    <block wx:for='{{movies}}' wx:for-item='movie'>
+    <block wx:for='{{movies}}' wx:for-item='movie' wx:key='index' >
       <view class='single-view-container'>
         <template is="movieTemplate" data='{{...movie}}' />
       </view>
