--- a/pages/movies/movie-list/movie-list-template.wxml
+++ b/pages/movies/movie-list/movie-list-template.wxml
@@ -9,7 +9,7 @@
       </view>
 
       <view class='movies-container'>
-        <block wx:for='{{movies}}' wx:for-item='movie'>
+        <block wx:for='{{movies}}' wx:for-item='movie' wx:key='index' >
           <template is="movieTemplate" data='{{...movie}}' />
         </block>
       </view>
