--- a/pages/practice/practice.wxml
+++ b/pages/practice/practice.wxml
@@ -1,6 +1,6 @@
 <!--pages/practice/practice.wxml-->
-<block wx:for='{{practice_list}}' wx:for-item="item" wx:for-index="idx">
+<block wx:for='{{practice_list}}' wx:for-item="item" wx:for-index="index" wx:key='index' >
   <view class='item-container' catchtap='onItemClick' hover-class='hover-class' hover-stay-time='50' data-url='{{item.url}}'>
-    <text class='item'>{{idx+1+". "+item.content}}</text>
+    <text class='item'>{{index+1+". "+item.content}}</text>
   </view>
 </block>
